intro page layout, text and images changed

--- a/index.html
+++ b/index.html
@@ -56,29 +56,29 @@
 			</div>
 		</div>
 
-		<main class="lat-pad long-pad">
+		<main class="lat-pad-L long-pad-L">
 			<section class="intro-section">
 				<ul class="intro-list">
 					<li class="intro-list-item">
 						<div>
-							<h3>Lorem Ipsum</h3>
+							<h3>MINDSET</h3>
 							<ul class="intro-list-item-list">
-								<li><strong>MINDSET:</strong> I believe every action counts. I enjoy analyzing situations and calculating potential outcomes.</li>
-								<li><strong>PROJECTS:</strong> I'm currently in a project to improve my data analist and game developing knowledge.</li>
-								<li><strong>CHALLENGES:</strong> I try to improve every day and to take risks, challenges are the fuel that makes me enjoy life.</li>
+								<li><strong>ACTIONS: </strong>I believe every action counts. I enjoy analyzing situations and predicting potential outcomes.</li>
+								<li><strong>IMPROVE: </strong>I focus on making processes run more smoothly, with a problem-solving approach and a business-oriented mindset.</li>
+								<li><strong>CHALLENGES: </strong>I try to improve every day and to take risks. Challenges are the driving force that make life exciting for me.</li>
 							</ul>
 						</div>
-						<img src="https://raw.githubusercontent.com/iturriker/portfolio/refs/heads/main/Imagenes/Pajaros/1.jpg" alt="">
+						<img src="Imagenes/Otros/mindset.jpg" alt="">
 					</li>
 					<li class="intro-list-item">
 						<div>
-							<h3>Lorem Ipsum</h3>
+							<h3>GOALS</h3>
 							<ul class="intro-list-item-list">
-								<li><strong>IMPROVE:</strong> My dedication is focused on making everything run more smoothly. I have a problem-solving approach and business mindset. </li>
-								<li><strong>RELATIONS:</strong> Throughout my life, I have developed a proactive and outgoing attitude that allows me to speak and persuade with ease, enabling me to create strong connections with people.</li>
+								<li><strong>PROJECTS: </strong>I’m currently working on improving my skills in data analysis, web and game development. These projects are part of my continuous path to blend creativity with technical skills in my creations.</li>
+								<li><strong>JOURNEY: </strong>From exploring various fields, such as business and technology, to diving into development, my journey has been — and will continue to be — a path of constant evolution.</li>
 							</ul>
 						</div>
-						<img src="https://raw.githubusercontent.com/iturriker/portfolio/refs/heads/main/Imagenes/Pajaros/2.jpg" alt="">
+						<img src="Imagenes/Otros/journey.jpg" alt="">
 					</li>
 					<li class="intro-list-item">
 						<div>
@@ -86,15 +86,15 @@
 							<div class="intro-list-item-wrap">
 								<div>
 									<h4>Business management</h3>
-									<ul class="intro-list-item-list">
+									<ul>
 										<li><strong>Digital transformation</strong></li>
 										<li><strong>Business Intelligence</strong></li>
-										<li><strong>Project Accountant</strong></li>
+										<li><strong>Data Science</strong></li>
 									</ul>
 								</div>
 								<div>
 									<h4>Software development</h3>
-									<ul class="intro-list-item-list">
+									<ul>
 										<li><strong>Web Front-End</strong></li>
 										<li><strong>Unity VideoGames</strong></li>
 										<li><strong>UI / UX</strong></li>
@@ -102,13 +102,13 @@
 								</div>
 							</div>
 						</div>
-						<img src="https://raw.githubusercontent.com/iturriker/portfolio/refs/heads/main/Imagenes/Pajaros/3.jpg" alt="">
+						<img src="Imagenes/Otros/expertise.jpg" alt="">
 					</li>
 				</ul>
 			</section>
 		</main>
 
-		<footer class="lat-pad long-pad">
+		<footer class="lat-pad-L long-pad-L">
 			<ul class="social-list">
 				<li class="social-list-item"><a href="https://www.linkedin.com/in/iker-karkokli-iturrioz" target="_blank" rel="noopener noreferrer"><img src="Logos/linkedin.png" alt="Link to LinkedIn"></a></li>
 				<li class="social-list-item"><a href="https://github.com/iturriker" target="_blank" rel="noopener noreferrer"><img src="Logos/github.png" alt="Link to GitHub"></a></li>		
