--- a/projects.html
+++ b/projects.html
@@ -175,7 +175,7 @@
             </section>
         </main>
 
-		<footer class="lat-pad long-pad">
+		<footer class="lat-pad-L long-pad-L">
 			<ul class="social-list">
 				<li class="social-list-item"><a href="https://www.linkedin.com/in/iker-karkokli-iturrioz" target="_blank" rel="noopener noreferrer"><img src="Logos/linkedin.png" alt="Link to LinkedIn"></a></li>
 				<li class="social-list-item"><a href="https://github.com/iturriker" target="_blank" rel="noopener noreferrer"><img src="Logos/github.png" alt="Link to GitHub"></a></li>		
