minicommit content update

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 								<div>
 									<h4>Software development</h4>
 									<ul>
-										<li><strong>Web Front-End</strong></li>
-										<li><strong>Unity VideoGames</strong></li>
+										<li><strong>Full Stack</strong></li>
+										<li><strong>3D Enviroments</strong></li>
 										<li><strong>UI / UX</strong></li>
 									</ul>
 								</div>
