--- a/tools.html
+++ b/tools.html
@@ -20,8 +20,8 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400..800&display=swap" rel="stylesheet">
 
-		<link rel="stylesheet" href="static/css/common.css">
-		<link rel="stylesheet" href="static/css/tools.css">
+		<link rel="stylesheet" href="assets/css/common.css">
+		<link rel="stylesheet" href="assets/css/tools.css">
 	</head>
 
 	<body>
@@ -64,14 +64,14 @@
 						</div>
 					</li>
 					<li class="tool-item">
-						<img src="static/logos/Docker-Logo.svg" alt="Docker-Logo">
+						<img src="assets/logos/Docker-Logo.svg" alt="Docker-Logo">
 						<div class="tool-info">
 							<p>Docker</p>
 							<p>Containerization Platform</p>
 						</div>
 					</li>
 					<li class="tool-item">
-						<img src="static/logos/Playwright-Logo.svg" alt="Playwright-Logo">
+						<img src="assets/logos/Playwright-Logo.svg" alt="Playwright-Logo">
 						<div class="tool-info">
 							<p>Playwright</p>
 							<p>Web Testing Framework</p>
@@ -106,21 +106,21 @@
 						</div>
 					</li>
 					<li class="tool-item">
-						<img src="static/logos/Javascript-Logo.svg" alt="Javascript-Logo">
+						<img src="assets/logos/Javascript-Logo.svg" alt="Javascript-Logo">
 						<div class="tool-info">
 							<p>JavaScript</p>
 							<p>Programming Language</p>
 						</div>
 					</li>
 					<li class="tool-item">
-						<img src="static/logos/N8n-Logo.svg" alt="n8n-Logo">
+						<img src="assets/logos/N8n-Logo.svg" alt="n8n-Logo">
 						<div class="tool-info">
 							<p>n8n</p>
 							<p>Workflow Automation</p>
 						</div>
 					</li>
 					<li class="tool-item">
-						<img src="static/logos/Unity-Logo.svg" alt="Unity-Logo">
+						<img src="assets/logos/Unity-Logo.svg" alt="Unity-Logo">
 						<div class="tool-info">
 							<p>Unity</p>
 							<p>Game Development Engine</p>
@@ -141,7 +141,7 @@
 						</div>
 					</li>
 					<li class="tool-item">
-						<img src="static/logos/MSSQL-Logo.svg" alt="MSSQL-Logo">
+						<img src="assets/logos/MSSQL-Logo.svg" alt="MSSQL-Logo">
 						<div class="tool-info">
 							<p>MSSQL</p>
 							<p>Database Management</p>
