cambios responsive, descarga de imágenes y arreglos generales creado entorno docker para CI/CD

--- a/frontend/portfolio.html
+++ b/frontend/portfolio.html
@@ -96,33 +96,57 @@
 					<h2><a href="#keys">keys</a></h2>
 				</div>
 				<div class="content lat-pad-L">
-					<ul class="intro-list">
+					<ul class="keys-list">
 						<li class="fire">
 							<img src="assets/icons/fire.svg" alt="fire icon">
-							<div>
-								<strong>Actions</strong>
+							<div class="key-info">
+								<p>Actions</p>
 								<p>Every action counts</p>
 							</div>
 						</li>
 						<li class="earth">
 							<img src="assets/icons/leaf.svg" alt="leaf icon">
-							<div>
-								<strong>Improve</strong>
+							<div class="key-info">
+								<p>Improve</p>
 								<p>Focus on what matters</p>
 							</div>
 						</li>
 						<li class="air">
 							<img src="assets/icons/power.svg" alt="power icon">
-							<div>
-								<strong>Challenges</strong>
+							<div class="key-info">
+								<p>Challenges</p>
 								<p>Challenges as driving force</p>
 							</div>
 						</li>
 						<li class="water">
 							<img src="assets/icons/spinner.svg" alt="spinner icon">
-							<div>
-								<strong>Journey</strong>
+							<div class="key-info">
+								<p>Journey</p>
 								<p>Path of constant evolution</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</section>
+
+			<section id="skills" class="vignette">
+				<div class="h2-mask">
+					<h2><a href="#skills">skills</a></h2>
+				</div>
+				<div class="content lat-pad-L">
+					<ul class="skills-list">
+						<li class="devops">
+							<img src="assets/svg/devops.svg" alt="DevOps-Diagram">
+							<div class="skills-info">
+								<p>DevOps</p>
+								<p>Development & Operations</p>
+							</div>
+						</li>
+						<li class="fullstack">
+							<img src="assets/svg/full-stack.svg" alt="Full-Stack-Diagram">
+							<div class="skills-info">
+								<p>Full Stack</p>
+								<p>Front / Back Development</p>
 							</div>
 						</li>
 					</ul>
@@ -136,35 +160,35 @@
 				<div class="content lat-pad-L">
 					<ul class="tools-list">
 						<li>
-							<img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Git_icon.svg" alt="Git-logo">
-							<div class="tool-info">
-								<p>Git</p>
-								<p>Version Control</p>
-							</div>
-						</li>
-						<li>
-							<img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/ChatGPT-Logo.svg" alt="ChatGPT-logo">
+							<img src="assets/logos/chatgpt-logo.svg" alt="ChatGPT-logo">
 							<div class="tool-info">
 								<p>ChatGPT</p>
 								<p>AI Assistant</p>
 							</div>
 						</li>
 						<li>
-							<img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/Python_logo_%28icon_only%29.svg" alt="Python-logo">
+							<img src="assets/logos/python-logo.svg" alt="Python-logo">
 							<div class="tool-info">
 								<p>Python</p>
 								<p>Programming Language</p>
 							</div>
 						</li>
 						<li>
-							<img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/C-Sharp_Logo.svg" alt="C-Sharp-logo">
+							<img src="assets/logos/c-sharp-logo.svg" alt="C-Sharp-logo">
 							<div class="tool-info">
 								<p>C#</p>
 								<p>Programming Language</p>
 							</div>
 						</li>
 						<li>
-							<img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub-logo">
+							<img src="assets/logos/git-logo.svg" alt="Git-logo">
+							<div class="tool-info">
+								<p>Git</p>
+								<p>Version Control</p>
+							</div>
+						</li>
+						<li>
+							<img src="assets/logos/github-logo.svg" alt="GitHub-logo">
 							<div class="tool-info">
 								<p>GitHub</p>
 								<p>Version Control Platform</p>
@@ -185,28 +209,21 @@
 							</div>
 						</li>
 						<li>
-							<img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/New_Power_BI_Logo.svg" alt="Power-BI-logo">
+							<img src="assets/logos/powerbi-logo.svg" alt="Power-BI-logo">
 							<div class="tool-info">
 								<p>Power BI</p>
 								<p>Business Analytics Tool</p>
 							</div>
 						</li>
 						<li>
-							<img src="https://upload.wikimedia.org/wikipedia/commons/3/34/Microsoft_Office_Excel_%282019%E2%80%93present%29.svg" alt="Excel-logo">
-							<div class="tool-info">
-								<p>Excel</p>
-								<p>Spreadsheet Software</p>
-							</div>
-						</li>
-						<li>
-							<img src="https://upload.wikimedia.org/wikipedia/commons/3/38/HTML5_Badge.svg" alt="HTML-logo">
+							<img src="assets/logos/html-logo.svg" alt="HTML-logo">
 							<div class="tool-info">
 								<p>HTML</p>
 								<p>Markup Language</p>
 							</div>
 						</li>
 						<li>
-							<img src="https://upload.wikimedia.org/wikipedia/commons/6/62/CSS3_logo.svg" alt="CSS-logo">
+							<img src="assets/logos/css-logo.svg" alt="CSS-logo">
 							<div class="tool-info">
 								<p>CSS</p>
 								<p>Style Sheet Language</p>
@@ -217,13 +234,6 @@
 							<div class="tool-info">
 								<p>JavaScript</p>
 								<p>Programming Language</p>
-							</div>
-						</li>
-						<li>
-							<img src="assets/logos/SVG-logo.svg" alt="SVG-logo">
-							<div class="tool-info">
-								<p>SVG</p>
-								<p>Image Format</p>
 							</div>
 						</li>
 						<li>
@@ -241,28 +251,28 @@
 							</div>
 						</li>
 						<li>
-							<img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Blender_logo_no_text.svg" alt="Blender-logo">
+							<img src="assets/logos/blender-logo.svg" alt="Blender-logo">
 							<div class="tool-info">
 								<p>Blender</p>
 								<p>3D Creation</p>
 							</div>
 						</li>
 						<li>
-							<img src="https://upload.wikimedia.org/wikipedia/commons/d/dc/Mongodb-icon.svg" alt="MongoDB-logo">
+							<img src="assets/logos/mongo-logo.svg" alt="MongoDB-logo">
 							<div class="tool-info">
 								<p>MongoDB</p>
 								<p>Database Management</p>
 							</div>
 						</li>
 						<li>
-							<img src="assets/logos/MSSQL-logo.svg" alt="MSSQL-logo">
+							<img src="assets/logos/mssql-logo.svg" alt="MSSQL-logo">
 							<div class="tool-info">
 								<p>MSSQL</p>
 								<p>Database Management</p>
 							</div>
 						</li>
 						<li>
-							<img src="https://upload.wikimedia.org/wikipedia/commons/2/29/Postgresql_elephant.svg" alt="PostgreSQL-logo">
+							<img src="assets/logos/postgres-logo.svg" alt="PostgreSQL-logo">
 							<div class="tool-info">
 								<p>PostgreSQL</p>
 								<p>Database Management</p>
@@ -273,30 +283,6 @@
 							<div class="tool-info">
 								<p>Nginx</p>
 								<p>Web Server</p>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</section>
-
-			<section id="skills" class="vignette">
-				<div class="h2-mask">
-					<h2><a href="#skills">skills</a></h2>
-				</div>
-				<div class="content lat-pad-L">
-					<ul class="skills-list">
-						<li>
-							<img src="assets/images/devops.svg" alt="DevOps-Diagram">
-							<div class="skills-info">
-								<p>DevOps</p>
-								<p>Development & Operations</p>
-							</div>
-						</li>
-						<li>
-							<img src="assets/images/full-stack.svg" alt="Full-Stack-Diagram">
-							<div class="skills-info">
-								<p>Full Stack</p>
-								<p>Front / Back Development</p>
 							</div>
 						</li>
 					</ul>
@@ -484,10 +470,10 @@
 				<p>Thanks for visiting! If you have any questions or just want to say hi, feel free to drop a message!</p>
 			</div>
 			<ul class="social-list">
-				<li class="social-list-item"><a href="https://www.linkedin.com/in/iker-karkokli-iturrioz" target="_blank" rel="noopener noreferrer"><img src="https://upload.wikimedia.org/wikipedia/commons/8/81/LinkedIn_icon.svg" alt="Link to LinkedIn"></a></li>
-				<li class="social-list-item"><a href="https://github.com/iturriker" target="_blank" rel="noopener noreferrer"><img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="Link to GitHub"></a></li>		
-				<li class="social-list-item"><a href="https://codepen.io/iturriker" target="_blank" rel="noopener noreferrer"><img src="https://upload.wikimedia.org/wikipedia/commons/0/07/Codepen-icon.svg" alt="Link to CodePen"></a></li>
-				<li class="social-list-item"><a href="mailto:iturriker@gmail.com" target="_blank" rel="noopener noreferrer"><img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" alt="Link to Gmail"></a></li>
+				<li class="social-list-item"><a href="https://www.linkedin.com/in/iker-karkokli-iturrioz" target="_blank" rel="noopener noreferrer"><img src="assets/logos/linkedin-logo.svg" alt="Link to LinkedIn"></a></li>
+				<li class="social-list-item"><a href="https://github.com/iturriker" target="_blank" rel="noopener noreferrer"><img src="assets/logos/github-logo.svg" alt="Link to GitHub"></a></li>		
+				<li class="social-list-item"><a href="https://codepen.io/iturriker" target="_blank" rel="noopener noreferrer"><img src="assets/logos/codepen-logo.svg" alt="Link to CodePen"></a></li>
+				<li class="social-list-item"><a href="mailto:iturriker@gmail.com" target="_blank" rel="noopener noreferrer"><img src="assets/logos/gmail-logo.svg" alt="Link to Gmail"></a></li>
 			</ul>
 
 			<div class="license-container">
@@ -495,18 +481,9 @@
 			</div>
 		</footer>
 
-		<script src="assets/js/index.js"></script>
+		<script src="assets/js/portfolio.js"></script>
 		<script async src="https://public.codepenassets.com/embed/index.js"></script>
         <script src="assets/js/vignette.js"></script>
 		<script src="assets/js/lines.js"></script>
 	</body>
 </html>
-
-<!-- EOF -->
-<!--
-<li><strong>ACTIONS: </strong>I believe every action counts. I enjoy analyzing situations and predicting potential outcomes.</li>
-<li><strong>IMPROVE: </strong>I focus on making processes run more smoothly, with a problem-solving approach and a business-oriented mindset.</li>
-<li><strong>CHALLENGES: </strong>I try to improve every day and to take risks. Challenges are the driving force that make life exciting for me.</li>
-<li><strong>PROJECTS: </strong>I’m currently working on improving my skills in data analysis, web and game development. These projects are part of my continuous path to blend creativity with technical skills in my creations.</li>
-<li><strong>JOURNEY: </strong>From exploring various fields, such as business and technology, to diving into development, my journey has been — and will continue to be — a path of constant evolution.</li>
--->
